# rust-uninit

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
src/: as_maybe_uninit.rs  impls.rs  lib.rs  out_ref.rs  out_references.rs  vec.rs
src/extension_traits/: as_out.rs  as_uninit.rs  boxed.rs  manually_drop_mut.rs  maybe_uninit.rs  maybe_uninit_transpose.rs  mod.rs  transpose.rs  vec.rs
src/read/: impls.rs  mod.rs
src/traits/: maybe_uninit.rs  mod.rs  slice.rs  vec.rs
src/utils/: macros.rs  mod.rs  prelude.rs
tests/: docs.rs
