[package]
name = "uninit"
version = "0.5.1-rc1"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/uninit"
homepage = "https://crates.io/crates/uninit"
repository = "https://github.com/danielhenrymantilla/rust-uninit"

description = "A collection of tools for a safer usage of uninitialized memory"
keywords = ["uninit", "sound", "unsafe", "read", "MaybeUninit"]
categories = ["memory-management", "rust-patterns"]

readme = "README.md"
license = "Zlib OR MIT OR Apache-2.0"

[dependencies]
extension-traits.version = "1.0.1"

[features]
default = [
    "std",
    "const_generics",
]

std = ["alloc"]
alloc = []

better-docs = ["nightly"]
nightly = []
specialization = ["nightly"]
const_generics = []

chain = []

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "-C", "opt-level=2",
]
