[package]
name = "uninit"
version = "0.6.1"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
    "Alyssa Haroldsen <kupiakos@gmail.com>",
]
edition = "2021"
rust-version = "1.56"
documentation = "https://docs.rs/uninit"
homepage = "https://crates.io/crates/uninit"
repository = "https://github.com/danielhenrymantilla/rust-uninit"

description = "A collection of tools for a safer usage of uninitialized memory"
keywords = ["uninit", "sound", "unsafe", "read", "MaybeUninit"]
categories = ["memory-management", "rust-patterns"]

readme = "README.md"
license = "Zlib OR MIT OR Apache-2.0"

[dependencies]
zerocopy = { version = ">=0.1,<0.8", default-features = false, optional = true }

[features]
default = ["std"]

std = ["alloc"]
alloc = []

better-docs = ["nightly"]
nightly = []
specialization = ["nightly"]

chain = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["-C", "opt-level=2"]
